Updated main (testing)

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,1 +1,58 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyNaEVymx0InzeYjYDI1Km1O"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":null,"metadata":{"id":"6Q7P8ah-ChF1"},"outputs":[],"source":[]},{"cell_type":"markdown","source":["Hej to you all who founded a secret"],"metadata":{"id":"7W6lTfO5Chtb"}}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMNJEem75y41whBU7YR+Yxs",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/theATM/geo-detection-notebook/blob/master/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6Q7P8ah-ChF1"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hej to you all who founded a secret"
+      ],
+      "metadata": {
+        "id": "7W6lTfO5Chtb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yeay"
+      ],
+      "metadata": {
+        "id": "jqWlxuaWG3gg"
+      }
+    }
+  ]
+}
