Added some code

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNJEem75y41whBU7YR+Yxs",
+      "authorship_tag": "ABX9TyM5FYOKLtjmgad6kfl5oUtH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,30 +29,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "6Q7P8ah-ChF1"
+        "id": "6Q7P8ah-ChF1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a456d46c-f840-425a-c75b-8ebea2ffd0e8"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "/content/drive/MyDrive/Colab Notebooks/Projects/GeoDetect\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive', force_remount=True)\n",
+        "%cd \"drive/MyDrive/Colab Notebooks/Projects/GeoDetect\"\n",
+        "%ls"
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Hej to you all who founded a secret"
+        "!git clone https://github.com/theATM/geo-detection-notebook.git ."
       ],
       "metadata": {
-        "id": "7W6lTfO5Chtb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Yeay"
-      ],
-      "metadata": {
-        "id": "jqWlxuaWG3gg"
-      }
+        "id": "VipX3-XzLpKo",
+        "outputId": "5766cf3c-d86e-485d-ac80-56754b44991f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into '.'...\n",
+            "remote: Enumerating objects: 66, done.\u001b[K\n",
+            "remote: Counting objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 66 (delta 4), reused 1 (delta 0), pack-reused 48\u001b[K\n",
+            "Unpacking objects: 100% (66/66), done.\n"
+          ]
+        }
+      ]
     }
   ]
 }
