Basic Git commands

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXQPhbjIhY7QeGnBHmqkKY",
+      "authorship_tag": "ABX9TyN+1EiTK8AGuP1MD5pUAljq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a456d46c-f840-425a-c75b-8ebea2ffd0e8"
+        "outputId": "fd3dd1d9-66d3-4acf-f883-ec93a752a756"
       },
       "outputs": [
         {
@@ -43,7 +43,11 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "/content/drive/MyDrive/Colab Notebooks/Projects/GeoDetect\n"
+            "/content/drive/MyDrive/Colab Notebooks/Projects/GeoDetect\n",
+            "\u001b[0m\u001b[01;34mcode\u001b[0m/\n",
+            "mkdir: cannot create directory ‘code’: File exists\n",
+            "fatal: destination path 'code' already exists and is not an empty directory.\n",
+            "/content/drive/MyDrive/Colab Notebooks/Projects/GeoDetect/code\n"
           ]
         }
       ],
@@ -51,7 +55,66 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)\n",
         "%cd \"drive/MyDrive/Colab Notebooks/Projects/GeoDetect\"\n",
-        "%ls"
+        "%ls\n",
+        "!mkdir code\n",
+        "!git clone https://github.com/theATM/geo-detection-notebook.git code\n",
+        "%cd code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git pull"
+      ],
+      "metadata": {
+        "id": "P31XPdj-EEbc",
+        "outputId": "551491fd-c1e2-439e-e73b-d50dbb28134b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Already up to date.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python --version\n",
+        "%pip install -r requirements.txt"
+      ],
+      "metadata": {
+        "id": "W_o-SNvc6XNh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h2680LYFE5k0",
+        "outputId": "d4018770-a84d-4f3f-baba-bfbdc187b530",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.7.14\n"
+          ]
+        }
       ]
     }
   ]
